# pico_sound_mixer

./: CMakeLists.txt  README.md  main.c
hardware/: assembled_board1.avif  assembled_board2.jpg.avif
